[workspace]
members = [
    "cli",
    "lib",
    "attributes",
    "build",
    "stub-producer",
    "stub-consumer",
    "actix-producer",
    "actix-consumer",
]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev]
# improves compilation performances on macos
split-debuginfo = "unpacked"