[workspace]
members = [
    "cli",
    "lib",
    "attributes",
    "build",
    "stub-producer",
    "stub-consumer",
    "actix-producer",
    "actix-consumer",
]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
# improves compilation performances on macos
split-debuginfo = "unpacked"

[patch.crates-io.warp-reverse-proxy]
path = "../tmp/warp-reverse-proxy"
