[package]
name = "actix-consumer"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[build-dependencies]
stubr-build = { path = "../build", version = "0.5.0-rc.1" }
actix-producer = { path = "../actix-producer" }

[dependencies]
actix-web = { version = "4.1.0", features = ["macros"], default-features = false }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
anyhow = "1.0.58"
derive_more = "0.99.17"
itertools = "0.10.3"
reqwest = { version = "0.11.11", features = ["json"] }
futures = { version = "0.3.21", features = ["alloc"] }

[dev-dependencies]
stubr = { path = "../lib", version = "0.5.0-rc.1", features = ["verify-actix", "record-actix"] }
asserhttp = { version = "0.5.1", features = ["actix"] }