[package]
name = "actix-consumer"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[build-dependencies]
stubr-build = { path = "../build", version = "0.6.2" }
actix-producer = { path = "../actix-producer" }

[dependencies]
actix-web = { version = "4.2", features = ["macros"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
derive_more = "0.99"
itertools = "0.10"
reqwest = { version = "0.11", features = ["json"] }
futures = { version = "0.3", features = ["alloc"] }

[dev-dependencies]
stubr = { path = "../lib", version = "0.6.2", features = ["verify-actix", "record-actix"] }
asserhttp = { version = "0.6", features = ["actix", "reqwest"] }
reqwest = { version = "0.11", features = ["blocking"] }
