[package]
name = "actix-producer"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
actix-web = { version = "4.2.1", features = ["macros"], default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
anyhow = "1.0.65"
derive_more = "0.99.17"
itertools = "0.10.4"

[dev-dependencies]
stubr = { path = "../lib", version = "0.5.0-rc.1", features = ["verify-actix", "record-actix"] }
asserhttp = { version = "0.5.1", features = ["actix"] }