[package]
name = "stubr-attributes"
version = "0.4.14"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Wiremock implemented in Rust"
homepage = "https://github.com/beltram/stubr"
repository = "https://github.com/beltram/stubr"
license = "Apache-2.0"
keywords = ["macro", "mock", "test", "contract", "http"]
categories = ["command-line-utilities", "development-tools::testing"]

include = ["/src/*", "/Cargo.toml", "/README.md"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["full"] }
quote = "1.0.15"
proc-macro2 = "1.0.36"
itertools = "0.10.3"

[dev-dependencies]
isahc = "1.6.0"
async-std = "1.10.0"
asserhttp = "0.4.0"