[package]
name = "stubr-attributes"
version = "0.5.0-rc.1"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Wiremock implemented in Rust"
homepage = "https://github.com/beltram/stubr"
repository = "https://github.com/beltram/stubr"
license = "Apache-2.0"
keywords = ["macro", "mock", "test", "contract", "http"]
categories = ["command-line-utilities", "development-tools::testing"]

include = ["/src/*", "/Cargo.toml", "/README.md"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.96", features = ["full"] }
quote = "1.0.18"
proc-macro2 = "1.0.40"
itertools = "0.10.3"

[dev-dependencies]
isahc = "1.7.2"
async-std = "1.11.0"
asserhttp = "0.5.1"