[package]
name = "stubr-attributes"
version = "0.6.2"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Wiremock implemented in Rust"
homepage = "https://github.com/beltram/stubr"
repository = "https://github.com/beltram/stubr"
license = "Apache-2.0"
keywords = ["macro", "mock", "test", "contract", "http"]
categories = ["command-line-utilities", "development-tools::testing"]

include = ["/src/*", "/Cargo.toml", "/README.md"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.11"

[dev-dependencies]
isahc = "1.7"
async-std = "1.12"
asserhttp = "0.6"