[package]
name = "stubr-cli"
version = "0.5.0-rc.1"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Wiremock implemented in Rust"
homepage = "https://github.com/beltram/stubr"
repository = "https://github.com/beltram/stubr"
license = "Apache-2.0"
keywords = ["cli", "mock", "test", "contract", "http"]
categories = ["command-line-utilities", "development-tools::testing"]

include = ["/src/*", "/Cargo.toml"]

[[bin]]
name = "stubr"
path = "src/main.rs"

[dependencies]
stubr = { path = "../lib", version = "0.5.0-rc.1", features = ["record-standalone"], default-features = false }
anyhow = { version = "1.0.64", default-features = false }
directories = "4.0.1"
clap = { version = "3.2.2", default-features = false, features = ["derive"] }
clap_complete = "3.2.4"
colored = "2.0.0"
humantime = "2.1.0"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.17", features = ["release_max_level_info"] }
simple_logger = { version = "2.3.0", default-features = false }
async-std = "1.12.0"

[dev-dependencies]
surf = "2.3.2"
isahc = { version = "1.7.2", features = ["json"] }
assert_cmd = "2.0.4"
asserhttp = { version = "0.5.1", features = ["surf"] }
async-std = { version = "1.12.0", features = ["attributes"] }

[features]
default = ["clap/color", "clap/suggestions"]
cloud = ["stubr/cloud"]
