[package]
name = "stubr-cli"
version = "0.5.0-rc.2"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Wiremock implemented in Rust"
homepage = "https://github.com/beltram/stubr"
repository = "https://github.com/beltram/stubr"
license = "Apache-2.0"
keywords = ["cli", "mock", "test", "contract", "http"]
categories = ["command-line-utilities", "development-tools::testing"]

include = ["/src/*", "/Cargo.toml"]

[[bin]]
name = "stubr"
path = "src/main.rs"

[dependencies]
stubr = { path = "../lib", version = "0.5.0-rc.2", features = ["record-standalone"], default-features = false }
anyhow = { version = "1.0", default-features = false }
directories = "4.0"
clap = { version = "4.0", default-features = false, features = ["derive", "std"] }
clap_complete = "4.0"
colored = "2.0"
humantime = "2.1"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4", features = ["release_max_level_info"] }
simple_logger = { version = "4.0", default-features = false }
async-std = "1.12"

[dev-dependencies]
surf = "2.3"
isahc = { version = "1.7", features = ["json"] }
assert_cmd = "2.0"
asserhttp = { version = "0.5", features = ["surf"] }
async-std = { version = "1.12", features = ["attributes"] }

[features]
default = ["clap/color", "clap/suggestions"]
cloud = ["stubr/cloud"]
