[package]
name = "stubr"
version = "0.5.0-rc.1"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Wiremock implemented in Rust"
homepage = "https://github.com/beltram/stubr"
repository = "https://github.com/beltram/stubr"
license = "Apache-2.0"
keywords = ["cli", "mock", "test", "contract", "http"]
categories = ["command-line-utilities", "development-tools::testing"]

include = ["/src/*", "/Cargo.toml"]

[dependencies]
stubr-attributes = { path = "../attributes", version = "0.5.0-rc.1", optional = true }
wiremock = "0.5.13"
anyhow = { version = "1.0.57", default-features = false }
async-trait = "0.1.53"
serde_json = { version = "1.0.79", default-features = false }
http-types = { version = "2.12.0", default-features = false }
itertools = "0.10.3"
const_format = "0.2.22"
regex = "1.5.5"
jsonpath_lib = "0.3.0"
jsonpath-plus = "0.1.9"
handlebars = "=4.2.2"
lazy_static = "1.4.0"
base64 = { version = "0.13.0", default-features = false }
futures = { version = "0.3.21", default-features = false }
chrono = { version = "0.4.19", default-features = false }
simpledateformat = "0.1.3"
humantime = "2.1.0"
chrono-tz = { version = "0.6.1", default-features = false }
percent-encoding = "2.1.0"
log = { version = "0.4.16", features = ["release_max_level_info"] }
http = "0.2.5"
serde = { version = "1.0.136", features = ["derive"], default-features = false }
async-std = "1.11.0"
jsonwebtoken = { version = "8.1.0", default-features = false }
rand_xorshift = "0.3.0"
rand = "0.8.5"
regex-syntax = { version = "0.6.25", default-features = false }
rand_regex = { version = "0.15.1", default-features = false }

isahc = { version = "1.7.0", optional = true, default-features = false }
reqwest = { version = "0.11.10", optional = true, default-features = false }

json_value_merge = { version = "1.1.2", optional = true }
actix-web = { version = "4.0.1", optional = true, default-features = false }
actix-http = { version = "3.0.4", optional = true, default-features = false }
actix-service = { version = "2.0.2", optional = true }
futures-util = { version = "0.3.21", optional = true }

warp = { version = "0.3.2", optional = true, default-features = false }
warp-reverse-proxy = { version = "0.5.0", optional = true, default-features = false }
tokio = { version = "1.16.1", optional = true }

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
stubr = { path = ".", features = ["record-standalone", "record-isahc", "record-reqwest", "record-actix", "verify-actix"] }
surf = "2.3.2"
tempfile = "3.3.0"
asserhttp = { version = "0.4.3", features = ["surf", "isahc", "reqwest", "actix"] }
isahc = { version = "1.7.0", features = ["json"] }
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.3.5", features = ["async_std", "html_reports"] }
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
uuid = "1.0.0"
email-address-parser = "1.0.3"

[[bench]]
name = "startup"
path = "benches/startup.rs"
harness = false

[[bench]]
name = "matching"
path = "benches/matching.rs"
harness = false

[[bench]]
name = "response"
path = "benches/response.rs"
harness = false

[[bench]]
name = "templating"
path = "benches/templating.rs"
harness = false

[features]
default = ["attributes"]
cloud = []
verify = ["json_value_merge"]
verify-actix = ["verify", "actix-web", "actix-http", "actix-service"]
attributes = ["stubr-attributes"]
record-standalone = ["warp", "warp-reverse-proxy", "tokio"]
record-isahc = ["isahc", "record-standalone"]
record-reqwest = ["reqwest", "reqwest/blocking", "record-standalone"]
record-actix = ["actix-web", "actix-http", "actix-service", "futures-util"]
