[package]
name = "stubr-consumer"
version = "0.0.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[build-dependencies]
stubr-build = { path = "../build", version = "0.5.0-rc.2" }
stub-producer = { path = "../stub-producer" }
actix-producer = { path = "../actix-producer" }

[dev-dependencies]
stubr = { path = "../lib", version = "0.5.0-rc.2", features = ["attributes"] }
asserhttp = { version = "0.5.1", features = ["isahc"] }
isahc = "1.7.2"
async-std = { version = "1.12.0", features = ["attributes"] }
